# rss_feed

./: .dockerignore  .gitignore  CLAUDE.md  DESCRIPTION  Dockerfile  Justfile  README.md  Topic Clustering Pipeline for RSS N.md  backfill.py  backfill_findings_plan.md  build_sector_db.py  build_sector_db_findings_plan.md  chatbot6.py  chatbot_rag.py  chatbot_rag_findings_plan.md  ci-rules.md  cluster_topics.py  cluster_topics_findings_plan.md  cluster_topics_guide.ipynb  coding-rules.md  constants.py  create_batch_briefings.py  create_batch_briefings_findings_plan.md  create_batch_files.py  create_batch_files_v2.py  create_batch_files_v2_findings_plan.md  daily_briefing.py  daily_briefing_findings_plan.md  debugging-rules.md  deploy.sh  df.xlsx  down_fin_data  down_fin_data.py  down_fin_data2.py  download.R  embed_feeds.py  embed_feeds_findings_plan.md  embed_feeds_plan.md  enrich_feeds.py  explore_topic_sentiment.py  (+27 more)
.claude/: CLAUDE.md  settings.local.json
.devcontainer/: devcontainer.json
.streamlit/: README.md
batch/: create_batch_briefings.py  create_batch_files_v2.py  retrieve_batch_briefings.py  retrieve_batch_file_results.py
cache/: langchain_cache.db
data/: batch_job_results_tickers.jsonl  batch_output_sector.jsonl  batch_tasks_briefings.jsonl  batch_tasks_rss_feeds.jsonl  batch_tasks_sector.jsonl  batch_tasks_tickers.jsonl  entity_sentiment_ts.tsv  pending_sector_batch.txt  rss_feeds.jsonl  sector_results.db  sector_sentiment_pivot.tsv  sector_summary.tsv  topic_centroids.json  topic_labels.json  topic_trends.tsv
docs/: api-reference.md  architecture.md  backfill_briefings.md  hf_feeds_plan.md  key-files.md  rag-chatbot-reusability-plan.md  schemas.md  scripts-reference.md  topic-clustering.md  vectorstore.md  workflows.md
enrich/: backfill.py  daily_briefing.py  embed_feeds.py  label_topics.py
ingest/: push_feeds_to_hf.py
notebooks/: README.md  (+13 more)
(+1187 files in other folders)
