[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rss-rag"
version = "0.1.0"
description = "Hybrid RAG pipeline over RSS feed news articles (BM25 + FAISS + query translation)"
requires-python = ">=3.10"
# Core deps needed by hybrid_rag.ask() — callers must have these installed.
# The simplest approach: pip install -e . inside the rss_feed venv, then
# point the other project at the same venv interpreter.
dependencies = [
    "openai",
    "python-dotenv",
    "langchain-core",
    "langchain-community",
    "langchain-openai",
    "faiss-cpu",
    "rank-bm25",
    "kitai",
]

[tool.setuptools]
# pipeline/ is the single installable package.
# External callers: from pipeline.hybrid_rag import ask
# Root shims (hybrid_rag.py, cluster_topics.py) preserve backward compat.
packages = ["pipeline"]
